# tf-from-ada

./: .gitignore  README.md  ai_model_from_ada.gpr  alire.toml
.devcontainer/: Dockerfile
.devcontainer/base_image/: Dockerfile  update_base_image.sh
cpp_test/: CMakeLists.txt  README.md  ai.cpp  main.cpp
src/: add_h.ads  ai.cpp  ai.h  ai_h.ads  ai_model_from_ada.adb  tokenizer.adb  tokenizer.ads
